# crm

./: Cargo.toml  Makefile  _typos.toml  cliff.toml
.github/workflows/: build.yml
crm/: Cargo.toml  build.rs  crm.yml
crm-metadata/: Cargo.toml
crm-metadata/src/: lib.rs  main.rs
crm-metadata/src/abi/: mod.rs
crm-metadata/tests/: service.rs
crm-send/: Cargo.toml
crm-send/src/: lib.rs  main.rs
crm-send/src/abi/: email.rs  in_app.rs  mod.rs  sms.rs
crm-send/src/pb/: mod.rs  notification.rs
crm-send/tests/: service.rs
crm/src/: client.rs  config.rs  gen_token.rs  lib.rs  server.rs
crm/src/abi/: auth.rs  mod.rs
fixtures/: cert.pem  key.pem  nginx.conf  rootCA.pem  token
protos/crm/: crm.proto
protos/notification/: messages.proto  rpc.proto
protos/user-stats/: messages.proto
user-stat/: Cargo.toml  build.rs
user-stat/examples/: gen.rs
user-stat/fixtures/: data.sql
user-stat/migrations/: 20240701061847_init.sql  20240701120321_index_the_table.sql
user-stat/src/: lib.rs  main.rs
user-stat/src/abi/: mod.rs
user-stat/src/pb/: user_stats.rs
user-stat/tests/: service.rs
