[workspace]
members = ["crm", "crm-metadata", "crm-send", "user-stat"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
crm-send = { path = "crm-send" }
derive_builder = "0.20.0"
futures = "0.3.30"
prost = "0.12.6"
prost-build = "0.12.6"
prost-types = "0.12.6"
rand = "0.8.5"
serde = "1.0.203"
serde_yaml = "0.9.34"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
sqlx = { version = "0.7.4", features = ["chrono", "postgres", "runtime-tokio", "tls-rustls"] }
tonic = { version = "0.11.0", features = ["zstd", "tls"] }
tonic-build = "0.11.0"
tokio-stream = "0.1.15"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
user-stat = { path = "user-stat" }
