[package]
name = "crm-metadata"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow.workspace = true
chrono = { workspace = true }
derive_builder = { workspace = true }
fake = { version = "2.9.2", features = ["derive", "chrono"] }
futures = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }


[build-dependencies]
anyhow.workspace = true
tonic-build = { workspace = true }
proto-builder-trait = "0.6.1"
