[package]
name = "crm-send"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow.workspace = true
chrono = { workspace = true }
derive_builder = "0.20.0"
fake = { version = "2.9.2", features = ["derive", "chrono"] }
futures = "0.3.30"
prost = { workspace = true }
prost-types = { workspace = true }
rand = "0.8.5"
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1.15"
tonic = { workspace = true }
tracing = { workspace= true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.9.1", features = ["v4"] }


[build-dependencies]
anyhow.workspace = true
tonic-build = { workspace = true }
proto-builder-trait = "0.6.1"
