[package]
name = "crm-send"
version = "0.1.0"
edition = "2021"

[features]
default = []
test_utils = []


[dependencies]
anyhow.workspace = true
chrono = { workspace = true }
crm-metadata = { workspace = true }
derive_builder = { workspace = true }
fake = { version = "2.9.2", features = ["derive", "chrono"] }
futures = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace= true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.9.1", features = ["v4"] }


[build-dependencies]
anyhow.workspace = true
tonic-build = { workspace = true }
proto-builder-trait = { workspace = true }

[dev-dependencies]
crm-send = { workspace = true, features = ["test_utils"]}
